--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     def koin_version = '3.1.4'
     implementation "io.insert-koin:koin-android:$koin_version"
+
+    testImplementation "io.mockk:mockk:1.12.1"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
