--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 android {
@@ -64,6 +65,18 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     def koin_version = '3.1.4'
     implementation "io.insert-koin:koin-android:$koin_version"
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation "io.ktor:ktor-client-core:$ktor_version"
+    implementation "io.ktor:ktor-client-cio:$ktor_version"
+    implementation "io.ktor:ktor-client-android:$ktor_version"
+    implementation "io.ktor:ktor-client-okhttp:$ktor_version"
+    implementation "io.ktor:ktor-client-serialization:$ktor_version"
+    implementation "io.ktor:ktor-client-serialization-jvm:$ktor_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0"
+    implementation 'io.ktor:ktor-client-logging-jvm:1.5.2'
+    implementation "io.coil-kt:coil-compose:1.3.1"
 
     testImplementation "io.mockk:mockk:1.12.1"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
