--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 buildscript {
     ext {
         compose_version = '1.0.1'
-        kotlin_version = "1.5.0"
+        kotlin_version = "1.5.21"
+        ktor_version = "1.5.2"
     }
     repositories {
         google()
@@ -10,7 +11,8 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
